@@ -17,6 +17,7 @@
 - add return check in ldap check_map_indirect().
 - check host macro is set before use.
 - check options length before use in parse_amd.c.
+- fix some out of order evaluations in parse_amd.c.
 
 04/06/2014 autofs-5.1.0
 =======================
